# rust-zdict

./: Cargo.toml  LICENSE-APACHE  Portfile.sample  README.md
src/: args.yaml  cli.rs  db.rs  dict.rs  dict2.rs  dict3.rs  dicts.rs  main.rs  yahoo.rs
src/dict/: jisho.rs  urban.rs  yahoo.rs
src/dicts/: urban.rs  yahoo.rs
