[package]
version = "0.1.0"
edition = "2018"

# Either `license` or `license-file` to be set
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
license = "MIT OR Apache-2.0"

name = "zdict"
description = "Look up words via online dictionaries"
# Default use `.md` and not support extension `.rst`
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-readme-field
#readme = "README.md"

#keywords = []
#categories = []

# Will automatically link to the corresponding docs.rs page if not given.
# Must set it because docs.rs only render libraries.
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-documentation-field
documentation = "https://github.com/zdict/rust-zdict"
homepage = "https://github.com/zdict/rust-zdict"
repository = "https://github.com/zdict/rust-zdict"


[dependencies]
clap = "3.0.0-beta.5"
reqwest = "*"
html5ever = "*"
kuchiki = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rusqlite = "*"
log = "*"
env_logger = "*"
tokio = { version = "*", features = ["macros"] }
indicatif = "*"


[[bin]]
name = "zd"
path = "src/main.rs"
