[package]
version = "0.1.1"
edition = "2018"

# Either `license` or `license-file` to be set
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
license = "MIT OR Apache-2.0"

name = "zdict"
description = "Look up words via online dictionaries"
# Default use `.md` and not support extension `.rst`
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-readme-field
#readme = "README.md"

#keywords = []
#categories = []

# Will automatically link to the corresponding docs.rs page if not given.
# Must set it because docs.rs only render libraries.
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-documentation-field
documentation = "https://github.com/zdict/rust-zdict"
homepage = "https://github.com/zdict/rust-zdict"
repository = "https://github.com/zdict/rust-zdict"


[dependencies]
clap = "3.0.0-beta.5"
reqwest = "0.11.4"
html5ever = "0.25.1"
kuchiki = "0.8.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rusqlite = "0.26.0"
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.12.0", features = ["macros"] }
indicatif = "0.16.2"


[[bin]]
name = "zd"
path = "src/main.rs"
