[package]
version = "0.1.3"
edition = "2018"

# Either `license` or `license-file` to be set
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
license = "MIT OR Apache-2.0"

name = "zdict"
description = "Look up words via online dictionaries"
# Default use `.md` and not support extension `.rst`
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-readme-field
#readme = "README.md"

#keywords = []
#categories = []

# Will automatically link to the corresponding docs.rs page if not given.
# Must set it because docs.rs only render libraries.
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#the-documentation-field
documentation = "https://github.com/zdict/rust-zdict"
homepage = "https://github.com/zdict/rust-zdict"
repository = "https://github.com/zdict/rust-zdict"


[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
reqwest = "0.11.4"
html5ever = "0.25.1"
kuchiki = "0.8.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rusqlite = "0.26.2"
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.21.0", features = ["macros"] }
indicatif = "0.16.2"


[[bin]]
name = "zd"
path = "src/main.rs"
